seaqt/QtPositioning/gen_qgeopositioninfo.h

class QDateTime;
class QGeoCoordinate;
class QGeoPositionInfo;
typedef struct QDateTime QDateTime;
typedef struct QGeoCoordinate QGeoCoordinate;
typedef struct QGeoPositionInfo QGeoPositionInfo;
QGeoPositionInfo* QGeoPositionInfo_new();
QGeoPositionInfo* QGeoPositionInfo_new2(QGeoCoordinate* coordinate, QDateTime* updateTime);
QGeoPositionInfo* QGeoPositionInfo_new3(QGeoPositionInfo* other);
void QGeoPositionInfo_operatorAssign(QGeoPositionInfo* self, QGeoPositionInfo* other);
bool QGeoPositionInfo_operatorEqual(const QGeoPositionInfo* self, QGeoPositionInfo* other);
bool QGeoPositionInfo_operatorNotEqual(const QGeoPositionInfo* self, QGeoPositionInfo* other);
bool QGeoPositionInfo_isValid(const QGeoPositionInfo* self);
void QGeoPositionInfo_setTimestamp(QGeoPositionInfo* self, QDateTime* timestamp);
QDateTime* QGeoPositionInfo_timestamp(const QGeoPositionInfo* self);
void QGeoPositionInfo_setCoordinate(QGeoPositionInfo* self, QGeoCoordinate* coordinate);
QGeoCoordinate* QGeoPositionInfo_coordinate(const QGeoPositionInfo* self);
void QGeoPositionInfo_setAttribute(QGeoPositionInfo* self, int attribute, double value);
double QGeoPositionInfo_attribute(const QGeoPositionInfo* self, int attribute);
void QGeoPositionInfo_removeAttribute(QGeoPositionInfo* self, int attribute);
bool QGeoPositionInfo_hasAttribute(const QGeoPositionInfo* self, int attribute);